Bug 12041 - Crashes on startup if Zip drive is switched on - panic integer divide fault
Summary: Crashes on startup if Zip drive is switched on - panic integer divide fault
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: Unspecified
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 1999-06-06 00:50 UTC by J.Hudson
Modified: 2005-03-21 06:30 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description J.Hudson 1999-06-06 00:50:01 UTC
error message on booting and probing, when the IOmega Zip drive is switched on.
(works fine with the Zip drive switched off)

.........
npx0: INT 16 interface
Waiting 15 seconds for SCSI devices to settle

Fatal trap 18: integer divide fault while in kernel mode
instruction pointer = 0x8: 0xf011f52f
stack pointer = 0x10: 0xf0268ad4
frame pointer = 0x10: 0xf0268d1c
code segment = base rx0, limit 0xfffff, type 0x1b
		= DPLo, pres 1, def32 1, gran 1
processor eflags = interrupt enabled, resume, IOPL=0
current process = 0(swapper)
interrupt mask = 
trap number = 18
panic integer divide fault

Fix: 

À²25	¸ÿÀµ5À		¸¿¶"""¸ÿÀ³4"¸ÿÀ¶4!«   qrô]    ýæô]ôíô]rí
How-To-Repeat: boot up   with the Iomega Zip drive switched on
Comment 1 Nick Hibma freebsd_committer freebsd_triage 1999-06-24 19:38:46 UTC
State Changed
From-To: open->analyzed

The problem sounds faintly familiar 


Comment 2 Nick Hibma freebsd_committer freebsd_triage 1999-06-24 19:38:46 UTC
Responsible Changed
From-To: freebsd-bugs->n_hibma

Why don't you tell me? Isn't providing a possible solution a reason 
to put the desk on someone's foot (or was it: the smelly bit on someones 
desk?). 

Comment 3 nick.hibma 1999-06-24 19:42:52 UTC
Your fix was garbled. Could you repost it if possible?

In the mean time, could you try this for a fix?

Cheers,

Nick

--- vpo.c.orig	Wed May 19 15:18:13 1999
+++ vpo.c	Thu Jun 24 20:34:39 1999
@@ -357,12 +357,9 @@
        case XPT_CALC_GEOMETRY:
        {
                struct    ccb_calc_geometry *ccg;
-               u_int32_t size_mb;
                u_int32_t secs_per_cylinder;
 
                ccg = &ccb->ccg;
-               size_mb = ccg->volume_size
-                       / ((1024L * 1024L) / ccg->block_size);
 
 #ifdef VP0_DEBUG
                printf("vpo%d: XPT_CALC_GEOMETRY (%d, %d) request\n",
Comment 4 nick.hibma 1999-06-28 10:27:25 UTC
The given fix does not solve the problem according to the submitter.

Nick
Comment 5 n_hibma 1999-07-03 23:40:16 UTC
Could you post the following details:

- output of dmesg
- a description of the device you have (Zip, Zip-Plus)
- what mode the parallel port is used in.
- anything else you consider relevant (the more the better)

I've failed to reproduce the problem up to now with a Zip Plus on a
ECP-1.9 port.

Cheers,

Nick
Comment 6 Nick Hibma freebsd_committer freebsd_triage 1999-07-12 13:47:56 UTC
State Changed
From-To: analyzed->feedback

The initial analysis of the problem did not lead to the solution. more 
feedback is needed to see whether there is some more fundamental problem. 
Comment 7 Nick Hibma freebsd_committer freebsd_triage 2001-04-09 19:03:51 UTC
State Changed
From-To: feedback->suspended

Not able to reproduce the problem and no one else sees this problem. I am 
stumped, as the submitter has tried several things and the bug is 
definitely persisting for him.
Comment 8 Mark Linimon freebsd_committer freebsd_triage 2004-08-27 23:21:40 UTC
State Changed
From-To: suspended->feedback

Is this still a problem with modern versions of FreeBSD? 


Comment 9 Mark Linimon freebsd_committer freebsd_triage 2004-08-27 23:21:40 UTC
Responsible Changed
From-To: n_hibma->freebsd-bugs

With permission of assignee, reset assignment.
Comment 10 Mark Linimon freebsd_committer freebsd_triage 2005-03-21 06:30:30 UTC
State Changed
From-To: feedback->closed

Feedback timeout (> 6 months).