Remove unused variable and computation, possibly leading to a divide by zero fault.

Possible fix for PR12041

PR:		12041
Submitted-By:	J.Hudson@massey.ac.nz
Reviewed-By:	nsouch


git-svn-id: svn+ssh://svn.freebsd.org/base/head@48248 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f